made some tweaks to crawling

--- a/crawler_output/_?utm_source=bloomberg-menu&amp;utm_medium=bbgnews&amp;bbgsum=DG-WS-CORE-bbgmenu.html
+++ b/crawler_output/_?utm_source=bloomberg-menu&amp;utm_medium=bbgnews&amp;bbgsum=DG-WS-CORE-bbgmenu.html
@@ -162,14 +162,7 @@ document.getElementsByTagName("body")[0]).appendChild(s);
 	<script src="http://www.bloomberg.com/professional/content/themes/bps/javascripts/respond/respond.min.js"></script>
 	<script src="http://www.bloomberg.com/professional/content/themes/bps/javascripts/eventie/eventie.js"></script>
 <![endif]-->
-<noscript><style> .wpb_animate_when_almost_visible { opacity: 1; }</style></noscript>
-                  <script type="text/javascript">
-                    var w=window;
-                    if(w.performance||w.mozPerformance||w.msPerformance||w.webkitPerformance){var d=document,AKSB=AKSB||{};AKSB.q=[];AKSB.mark=function(a,b){AKSB.q.push(["mark",a,b||(new Date).getTime()])};AKSB.measure=function(a,b,c){AKSB.q.push(["measure",a,b,c||(new Date).getTime()])};AKSB.done=function(a){AKSB.q.push(["done",a])};AKSB.mark("firstbyte",(new Date).getTime());AKSB.prof={custid:"89315",ustr:"cs",originlat:0,clientrtt:7,ghostip:"23.67.251.200",
-                    ipv6:false,pct:10,clientip:"71.125.20.226",requestid:"6323722",protocol:"",blver:6,akM:"x",akN:"ae",akTT:"O",akTX:"1",akTI:"6323722",ai:"204646",re:"false"};(function(a){var b=d.createElement("script");b.async="async";b.src=a;a=d.getElementsByTagName("script");a=a[a.length-
-                    1];a.parentNode.insertBefore(b,a)})(("https:"===d.location.protocol?"https:":"http:")+"//ds-aksb-a.akamaihd.net/aksb.min.js")};
-                  </script>
-                  </head>
+<noscript><style> .wpb_animate_when_almost_visible { opacity: 1; }</style></noscript></head>
 <body class="home page page-id-683 page-template page-template-front-page page-template-front-page-php wpb-js-composer js-comp-ver-4.7.4 vc_responsive">
 <script>
 	dataLayer = [{
@@ -214,7 +207,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <li class="bb-that__col bb-that__col--md">
             <section class="bb-that-category">
     <h2 class="bb-that-category__title">Financial Products</h2>
-    <ul class="bb-that-category__content"><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloomberg.com/professional/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-CORE-bbgmenu">Bloomberg Terminal</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergtradebook.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-02-13-TBOOK-bbgmenu">Bloomberg Tradebook</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergbriefs.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal">Bloomberg Briefs</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergindexes.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-05-13-INDEXES-bbgmenu">Bloomberg Indices</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergsef.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-08-13-SEF-bbgmenu">Bloomberg SEF</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://about.bloomberginstitute.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal">Bloomberg Institute</a></li></ul></section>            <section class="bb-that-category">
+    <ul class="bb-that-category__content"><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloomberg.com/professional/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-CORE-bbgmenu">Bloomberg Terminal</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergtradebook.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-02-13-TBOOK-bbgmenu">Bloomberg Tradebook</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergbriefs.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal">Bloomberg Briefs</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergindices.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-05-13-Indices-bbgmenu">Bloomberg Indices</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergsef.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-08-13-SEF-bbgmenu">Bloomberg SEF</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://about.bloomberginstitute.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal">Bloomberg Institute</a></li></ul></section>            <section class="bb-that-category">
     <h2 class="bb-that-category__title">Bloomberg Customers</h2>
     <ul class="bb-that-category__content"><li class="bb-that-category__item"><a class="bb-that-category__link" href="https://bba.bloomberg.net/?utm_source=bloomberg-menu&amp;utm_medium=terminal">Bloomberg Anywhere Remote Login</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloomberg.com/professional/downloads/?utm_source=bloomberg-menu&amp;utm_medium=terminal">Download Software</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://service.bloomberg.com/portal/sessions/new?utm_source=bloomberg-menu&amp;utm_medium=terminal">Service Center</a></li></ul></section>    </li>
                     <li class="bb-that__col bb-that__col--md">
@@ -256,7 +249,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <li class="bb-that__col bb-that__col--sm">
             <section class="bb-that-category">
     <h2 class="bb-that-category__title">Financial Products</h2>
-    <ul class="bb-that-category__content"><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloomberg.com/professional/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-CORE-bbgmenu">Bloomberg Terminal</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergtradebook.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-02-13-TBOOK-bbgmenu">Bloomberg Tradebook</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergbriefs.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal">Bloomberg Briefs</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergindexes.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-05-13-INDEXES-bbgmenu">Bloomberg Indices</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergsef.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-08-13-SEF-bbgmenu">Bloomberg SEF</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://about.bloomberginstitute.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal">Bloomberg Institute</a></li></ul></section>            <section class="bb-that-category">
+    <ul class="bb-that-category__content"><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloomberg.com/professional/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-CORE-bbgmenu">Bloomberg Terminal</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergtradebook.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-02-13-TBOOK-bbgmenu">Bloomberg Tradebook</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergbriefs.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal">Bloomberg Briefs</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergindices.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-05-13-Indices-bbgmenu">Bloomberg Indices</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergsef.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-08-13-SEF-bbgmenu">Bloomberg SEF</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://about.bloomberginstitute.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal">Bloomberg Institute</a></li></ul></section>            <section class="bb-that-category">
     <h2 class="bb-that-category__title">Enterprise Products</h2>
     <ul class="bb-that-category__content"><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloomberg.com/enterprise/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-09-13-ES-bbgmenu">Enterprise Solutions</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloomberg.com/trading-solutions/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-09-13-TS-bbgmenu">Trading Solutions</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloomberg.com/vault/?utm_source=bloomberg-menu&amp;utm_medium=terminal&amp;bbgsum=DG-WS-09-13-ES-BVAULT-bbgmenu">Bloomberg Vault</a></li><li class="bb-that-category__item"><a class="bb-that-category__link" href="http://www.bloombergpolarlake.com/?utm_source=bloomberg-menu&amp;utm_medium=terminal">Bloomberg PolarLake</a></li></ul></section>            <section class="bb-that-category">
     <h2 class="bb-that-category__title">Industry Products</h2>
@@ -526,13 +519,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<h2><a href="http://www.bloomberg.com/professional/blog/">From The Blog</a></h2>
 				<div class="col-sm-6 article">
 						<div class="category">
-				<a href="http://www.bloomberg.com/professional/blog/category/asset-mgmt/" rel="category tag">Asset Management</a>			</div>
-						<h3><a href="http://www.bloomberg.com/professional/blog/traders-tech-the-state-of-the-buyside-oms/">Traders tech: The state of the buyside OMS</a></h3>
+				<a href="http://www.bloomberg.com/professional/blog/category/fx/" rel="category tag">Foreign Exchange</a>			</div>
+						<h3><a href="http://www.bloomberg.com/professional/blog/middle-east-forex-an-evolution/">Middle East forex: an evolution</a></h3>
 		</div>
 			<div class="col-sm-6 article">
 						<div class="category">
-				<a href="http://www.bloomberg.com/professional/blog/category/regulations/" rel="category tag">Regulation</a>			</div>
-						<h3><a href="http://www.bloomberg.com/professional/blog/small-broker-dealers-would-be-naive-to-think-theyre-immune-from-basel-iii/">Small broker-dealers would be naive to think they&#8217;re immune from Basel III</a></h3>
+				<a href="http://www.bloomberg.com/professional/blog/category/commodity/" rel="category tag">Commodities</a>, <a href="http://www.bloomberg.com/professional/blog/category/credit-analysts/" rel="category tag">Credit Analyst</a>, <a href="http://www.bloomberg.com/professional/blog/category/emerging-market/" rel="category tag">Emerging Markets</a>			</div>
+						<h3><a href="http://www.bloomberg.com/professional/blog/africas-largest-oil-producers-cut-by-moodys-after-review/">Africa&#8217;s largest oil producers cut by Moody&#8217;s after review</a></h3>
 		</div>
 	</div>
 
@@ -577,13 +570,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="container-fluid recent-articles">
 				<div class="col-sm-6 article">
 						<div class="category">
-				<a href="http://www.bloomberg.com/professional/blog/category/eco/" rel="category tag">Economics</a>			</div>
-						<h3><a href="http://www.bloomberg.com/professional/blog/brexit-shadow-hides-deeper-cracks-in-uk-economic-firmament/">Brexit shadow hides deeper cracks in U.K. economic firmament</a></h3>
+				<a href="http://www.bloomberg.com/professional/blog/category/fi/" rel="category tag">Fixed Income</a>, <a href="http://www.bloomberg.com/professional/blog/category/regulations/" rel="category tag">Regulation</a>			</div>
+						<h3><a href="http://www.bloomberg.com/professional/blog/best-execution-on-otc-instruments/">Best execution on OTC instruments</a></h3>
 		</div>
 			<div class="col-sm-6 article">
 						<div class="category">
-				<a href="http://www.bloomberg.com/professional/blog/category/eco/" rel="category tag">Economics</a>, <a href="http://www.bloomberg.com/professional/blog/category/emerging-market/" rel="category tag">Emerging Markets</a>			</div>
-						<h3><a href="http://www.bloomberg.com/professional/blog/imf-calls-on-latin-america-to-aid-corporate-borrowers-amid-slump/">IMF calls on Latin America to aid corporate borrowers amid slump</a></h3>
+				<a href="http://www.bloomberg.com/professional/blog/category/regulations/" rel="category tag">Regulation</a>			</div>
+						<h3><a href="http://www.bloomberg.com/professional/blog/high-speed-trading-backlash-mounts-pressure-on-indias-sebi/">High-speed trading backlash mounts pressure on India&#8217;s SEBI</a></h3>
 		</div>
 	</div>
 
@@ -628,13 +621,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="container-fluid recent-articles">
 				<div class="col-sm-6 article">
 						<div class="category">
-				<a href="http://www.bloomberg.com/professional/blog/category/uncategorized/" rel="category tag">Uncategorized</a>			</div>
-						<h3><a href="http://www.bloomberg.com/professional/blog/will-u-s-delay-bonus-several-years-heres-tell/">Will the U.S. delay your bonus several years? Here&#8217;s how to tell</a></h3>
+				<a href="http://www.bloomberg.com/professional/blog/category/eco/" rel="category tag">Economics</a>			</div>
+						<h3><a href="http://www.bloomberg.com/professional/blog/china-factory-stabilization-shows-little-need-for-added-stimulus/">China factory stabilization shows little need for added stimulus</a></h3>
 		</div>
 			<div class="col-sm-6 article">
 						<div class="category">
-				<a href="http://www.bloomberg.com/professional/blog/category/sustainable-finance/" rel="category tag">Sustainable Finance</a>			</div>
-						<h3><a href="http://www.bloomberg.com/professional/blog/quantitative-investing-for-the-sustainability-set/">Quantitative investing for the sustainability set</a></h3>
+				<a href="http://www.bloomberg.com/professional/blog/category/commodity/" rel="category tag">Commodities</a>, <a href="http://www.bloomberg.com/professional/blog/category/hedge-fund/" rel="category tag">Hedge Funds</a>			</div>
+						<h3><a href="http://www.bloomberg.com/professional/blog/oil-bulls-bet-the-waning-u-s-shale-boom-will-curb-global-glut/">Oil bulls bet the waning U.S. shale boom will curb global glut</a></h3>
 		</div>
 	</div>
 
@@ -679,13 +672,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="container-fluid recent-articles">
 				<div class="col-sm-6 article">
 						<div class="category">
-				<a href="http://www.bloomberg.com/professional/blog/category/ir/" rel="category tag">Investor Relations</a>			</div>
-						<h3><a href="http://www.bloomberg.com/professional/blog/five-tips-for-crafting-a-truly-winning-ir-strategy/">Five tips for crafting a truly winning IR strategy</a></h3>
+				<a href="http://www.bloomberg.com/professional/blog/category/bi/" rel="category tag">Bloomberg Intelligence</a>			</div>
+						<h3><a href="http://www.bloomberg.com/professional/blog/war-on-coal/">War on coal</a></h3>
 		</div>
 			<div class="col-sm-6 article">
 						<div class="category">
-				<a href="http://www.bloomberg.com/professional/blog/category/commodity/" rel="category tag">Commodities</a>			</div>
-						<h3><a href="http://www.bloomberg.com/professional/blog/the-importance-of-energy-data-transparency/">The importance of energy data transparency</a></h3>
+				<a href="http://www.bloomberg.com/professional/blog/category/asset-mgmt/" rel="category tag">Asset Management</a>			</div>
+						<h3><a href="http://www.bloomberg.com/professional/blog/traders-tech-the-state-of-the-buyside-oms/">Traders tech: The state of the buyside OMS</a></h3>
 		</div>
 	</div>
 
@@ -740,5 +733,5 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script type='text/javascript' src='http://www.bloomberg.com/professional/content/themes/bps/javascripts/scripts.min.9a40dbf1df6b662001beabcf36a85f7c.js'></script>
 <script type='text/javascript' src='http://www.bloomberg.com/professional/content/plugins/wpbakery-visual-composer/assets/js/js_composer_front.js?ver=4.7.4'></script>
 
-<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","licenseKey":"cd0676da66","applicationID":"3275733","transactionName":"YQEHZRZXWkpVVhVbWlhLJFIQX1tXG1MTXVtCSRVQA1M=","queueTime":0,"applicationTime":500,"atts":"TUYEE15NSUQ=","errorBeacon":"bam.nr-data.net","agent":""}</script></body>
+<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","licenseKey":"cd0676da66","applicationID":"3275733","transactionName":"YQEHZRZXWkpVVhVbWlhLJFIQX1tXG1MTXVtCSRVQA1M=","queueTime":0,"applicationTime":677,"atts":"TUYEE15NSUQ=","errorBeacon":"bam.nr-data.net","agent":""}</script></body>
 </html>
