--- a/crawler_output/_tweet?url=http%3A%2F%2Fwww.bloomberg.html
+++ b/crawler_output/_tweet?url=http%3A%2F%2Fwww.bloomberg.html
@@ -1,4 +1,4 @@
-https://twitter.com/intent/tweet?url=http%3A%2F%2Fwww.bloomberg.com%2Fgadfly%2Farticles%2F2016-05-01%2Fsaudi-arabia-heeds-sheikh-yamani-oil-warning&amp;text=Julian%20Lee%3A%20The%20Saudis%20are%20finally%20listening%20to%20an%20oil%20warning%20from%20their%20past&amp;via=bfly
+https://twitter.com/intent/tweet?url=http%3A%2F%2Fwww.bloomberg.com%2Fgadfly%2Farticles%2F2016-05-03%2Ftim-cook-peddles-the-wrong-apple-message&amp;text=Shira%20Ovide%3A%20Apple%20has%20a%20great%20message%2C%20so%20why%20isn't%20Tim%20Cook%20selling%20it%3F&amp;via=bfly
 <!DOCTYPE html>
 <html lang="en" dir="ltr"
       class="">
@@ -8,7 +8,7 @@ https://twitter.com/intent/tweet?url=http%3A%2F%2Fwww.bloomberg.com%2Fgadfly%2Fa
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
     <meta name="twitter:widgets:csp" content="on">
     <title>Share a link on Twitter</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="https://abs.twimg.com/a/1461824155/css/tfw/intents_rosetta.bundle.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://abs.twimg.com/a/1461952323/css/tfw/intents_rosetta.bundle.css">
 
     <style type="text/css">
       html { display:none; }
@@ -45,12 +45,12 @@ https://twitter.com/intent/tweet?url=http%3A%2F%2Fwww.bloomberg.com%2Fgadfly%2Fa
   id="update-form"
   method="post">
   <div class="hd">
-      <input name="url" type="hidden" value="http://www.bloomberg.com/gadfly/articles/2016-05-01/saudi-arabia-heeds-sheikh-yamani-oil-warning">
+      <input name="url" type="hidden" value="http://www.bloomberg.com/gadfly/articles/2016-05-03/tim-cook-peddles-the-wrong-apple-message">
   <input name="via" type="hidden" value="bfly">
-  <input name="text" type="hidden" value="Julian Lee: The Saudis are finally listening to an oil warning from their past">
+  <input name="text" type="hidden" value="Shira Ovide: Apple has a great message, so why isn&#39;t Tim Cook selling it?">
 
       <input type="hidden" name="repost_after_login" value="/intent/tweet">
-    <input type="hidden" name="authenticity_token" value="ab15c0dd3e0cfd0e48b0dcd5b2fa8a9d94ecba31">
+    <input type="hidden" name="authenticity_token" value="6d6cc3140d34da497b65ce5dd04159f00680dbec">
 
     <label for="status" id="status-label">Tweet Text</label>
   </div>
@@ -61,7 +61,7 @@ https://twitter.com/intent/tweet?url=http%3A%2F%2Fwww.bloomberg.com%2Fgadfly%2Fa
       <textarea id="status" name="status" required autofocus
         aria-required="true" aria-describedby="post-error char-count"
         
-      >Julian Lee: The Saudis are finally listening to an oil warning from their past http://www.bloomberg.com/gadfly/articles/2016-05-01/saudi-arabia-heeds-sheikh-yamani-oil-warning via @bfly</textarea>
+      >Shira Ovide: Apple has a great message, so why isn&#39;t Tim Cook selling it? http://www.bloomberg.com/gadfly/articles/2016-05-03/tim-cook-peddles-the-wrong-apple-message via @bfly</textarea>
     </span>
   </div>
 
@@ -135,17 +135,17 @@ https://twitter.com/intent/tweet?url=http%3A%2F%2Fwww.bloomberg.com%2Fgadfly%2Fa
 </div>
 
 
-    <script type="text/javascript" charset="utf-8" nonce="NYNfEWlgd/wqmwlUqfXBRg==">
+    <script type="text/javascript" charset="utf-8" nonce="6LtG6+BSjiZuaPkSqMVbcQ==">
       var twttr = twttr || {};
-      twttr.form_authenticity_token = 'ab15c0dd3e0cfd0e48b0dcd5b2fa8a9d94ecba31';
+      twttr.form_authenticity_token = '6d6cc3140d34da497b65ce5dd04159f00680dbec';
       if (self == top) {
         document.documentElement.style.display = 'block';
       }
     </script>
 
-    <script src="https://abs.twimg.com/a/1461824155/tfw/loadrunner.js" type="text/javascript" data-path="https://abs.twimg.com/a/1461824155/tfw" data-main="tfw/intents/main"></script>
+    <script src="https://abs.twimg.com/a/1461952323/tfw/loadrunner.js" type="text/javascript" data-path="https://abs.twimg.com/a/1461952323/tfw" data-main="tfw/intents/main"></script>
 
-    <script type="text/javascript" charset="utf-8" nonce="NYNfEWlgd/wqmwlUqfXBRg==">
+    <script type="text/javascript" charset="utf-8" nonce="6LtG6+BSjiZuaPkSqMVbcQ==">
 
   var twttr = twttr || {};
   twttr.tco = {
@@ -154,13 +154,13 @@ https://twitter.com/intent/tweet?url=http%3A%2F%2Fwww.bloomberg.com%2Fgadfly%2Fa
 
   using('tfw/intents/tweetbox', 'imports/jquery', function(Tweetbox, $) {
     $('#status').each(function() {
-      new Tweetbox(this, 0, 78);
+      new Tweetbox(this, 0, 73);
     });
   });
 
 </script>
 
-    <script type="text/javascript" nonce="NYNfEWlgd/wqmwlUqfXBRg==">
+    <script type="text/javascript" nonce="6LtG6+BSjiZuaPkSqMVbcQ==">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 
